--- a/SLDC/SLDC.ioc
+++ b/SLDC/SLDC.ioc
@@ -49,20 +49,20 @@ Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE5
 Mcu.Pin1=PE6
-Mcu.Pin10=PB1
-Mcu.Pin11=PE9
-Mcu.Pin12=PE11
-Mcu.Pin13=PB14
-Mcu.Pin14=PB15
-Mcu.Pin15=PD12
-Mcu.Pin16=PD13
-Mcu.Pin17=PC6
-Mcu.Pin18=PC7
-Mcu.Pin19=PA9
+Mcu.Pin10=PE9
+Mcu.Pin11=PE11
+Mcu.Pin12=PB14
+Mcu.Pin13=PB15
+Mcu.Pin14=PD12
+Mcu.Pin15=PD13
+Mcu.Pin16=PC6
+Mcu.Pin17=PC7
+Mcu.Pin18=PA9
+Mcu.Pin19=PA13
 Mcu.Pin2=PH0-OSC_IN
-Mcu.Pin20=PA10
-Mcu.Pin21=PA13
-Mcu.Pin22=PA14
+Mcu.Pin20=PA14
+Mcu.Pin21=PB3
+Mcu.Pin22=PB7
 Mcu.Pin23=PB9
 Mcu.Pin24=VP_SYS_VS_Systick
 Mcu.Pin25=VP_TIM3_VS_ClockSourceINT
@@ -72,11 +72,11 @@ Mcu.Pin28=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin29=VP_TIM12_VS_ClockSourceINT
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PA0-WKUP
-Mcu.Pin5=PA1
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PB0
+Mcu.Pin5=PA3
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
 Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -100,9 +100,6 @@ NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP.Signal=S_TIM5_CH1
-PA1.Signal=S_TIM2_CH2
-PA10.Mode=Asynchronous
-PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -116,6 +113,10 @@ PB0.Signal=S_TIM3_CH3
 PB1.Signal=S_TIM3_CH4
 PB14.Signal=S_TIM12_CH1
 PB15.Signal=S_TIM12_CH2
+PB3.Locked=true
+PB3.Signal=S_TIM2_CH2
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
 PB9.Signal=S_TIM11_CH1
 PC6.Signal=S_TIM8_CH1
 PC7.Signal=S_TIM8_CH2
@@ -266,7 +267,8 @@ TIM9.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM9.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
 TIM9.Period=999
 TIM9.Prescaler=83
-USART1.IPParameters=VirtualMode
+USART1.BaudRate=230400
+USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
